bug(book image): fix book images to prevent distortion
[Delivers #158556694]

--- a/client/public/style/style.scss
+++ b/client/public/style/style.scss
@@ -277,7 +277,14 @@ nav li :hover{
 }
 
 .card-image img {
-  height: 200px;
+  height: 280px;
+  max-height: 280px;
+  object-fit: cover;
+}
+
+.card img.materialized.active {
+  max-height: none;
+  object-fit: none;
 }
 
 .book-icon {
@@ -491,12 +498,25 @@ nav li :hover{
   .parallax-container .dashboard{
     height: 15%;
   }
+
+  .card-image img {
+    height: 300px;
+    max-height: 300px;
+    object-fit: contain;
+  }
+
 }
 
 @media (max-width: 820px) {
   .profile-img {
     width: 150px;
     margin: 0;
+  }
+
+  .card-image img {
+    height: 250px;
+    max-height: 250px;
+    object-fit: cover;
   }
 
   .profile-img-div {
